gl_ext_api.h


typedef char GLbyte;

typedef char GLchar;

typedef double GLdouble;

typedef float GLclampf;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef signed int GLintptr;

typedef signed int GLsizeiptr;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;

void MultiTexCoord4sv(GLenum, const GLshort *);

void LoadTransposeMatrixf(const GLfloat *);

void LoadTransposeMatrixd(const GLdouble *);

void MultTransposeMatrixf(const GLfloat *);

void MultTransposeMatrixd(const GLdouble *);

void SampleCoverage(GLclampf, GLboolean);

void CompressedTexImage3D(GLenum, GLint, GLenum, GLsizei, GLsizei, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexImage2D(GLenum, GLint, GLenum, GLsizei, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexImage1D(GLenum, GLint, GLenum, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexSubImage3D(GLenum, GLint, GLint, GLint, GLint, GLsizei, GLsizei, GLsizei, GLenum, GLsizei, const GLvoid *);

void CompressedTexSubImage2D(GLenum, GLint, GLint, GLint, GLsizei, GLsizei, GLenum, GLsizei, const GLvoid *);

void CompressedTexSubImage1D(GLenum, GLint, GLint, GLsizei, GLenum, GLsizei, const GLvoid *);

void GetCompressedTexImage(GLenum, GLint, GLvoid *);


void BlendFuncSeparate(GLenum, GLenum, GLenum, GLenum);

void FogCoordf(GLfloat);

void FogCoordfv(const GLfloat *);

void FogCoordd(GLdouble);

void FogCoorddv(const GLdouble *);

void FogCoordPointer(GLenum, GLsizei, const GLvoid *);

void MultiDrawArrays(GLenum, GLint *, GLsizei *, GLsizei);

void MultiDrawElements(GLenum, const GLsizei *, GLenum, const GLvoid* *, GLsizei);

void PointParameterf(GLenum, GLfloat);

void PointParameterfv(GLenum, const GLfloat *);

void PointParameteri(GLenum, GLint);

void PointParameteriv(GLenum, const GLint *);

void SecondaryColor3b(GLbyte, GLbyte, GLbyte);

void SecondaryColor3bv(const GLbyte *);

void SecondaryColor3d(GLdouble, GLdouble, GLdouble);

void SecondaryColor3dv(const GLdouble *);

void SecondaryColor3f(GLfloat, GLfloat, GLfloat);

void SecondaryColor3fv(const GLfloat *);

void SecondaryColor3i(GLint, GLint, GLint);

void SecondaryColor3iv(const GLint *);

void SecondaryColor3s(GLshort, GLshort, GLshort);

void SecondaryColor3sv(const GLshort *);

void SecondaryColor3ub(GLubyte, GLubyte, GLubyte);

void SecondaryColor3ubv(const GLubyte *);

void SecondaryColor3ui(GLuint, GLuint, GLuint);

void SecondaryColor3uiv(const GLuint *);

void SecondaryColor3us(GLushort, GLushort, GLushort);

void SecondaryColor3usv(const GLushort *);

void SecondaryColorPointer(GLint, GLenum, GLsizei, const GLvoid *);

void WindowPos2d(GLdouble, GLdouble);

void WindowPos2dv(const GLdouble *);

void WindowPos2f(GLfloat, GLfloat);

void WindowPos2fv(const GLfloat *);

void WindowPos2i(GLint, GLint);

void WindowPos2iv(const GLint *);

void WindowPos2s(GLshort, GLshort);

void WindowPos2sv(const GLshort *);

void WindowPos3d(GLdouble, GLdouble, GLdouble);

void WindowPos3dv(const GLdouble *);

void WindowPos3f(GLfloat, GLfloat, GLfloat);

void WindowPos3fv(const GLfloat *);

void WindowPos3i(GLint, GLint, GLint);

void WindowPos3iv(const GLint *);

void WindowPos3s(GLshort, GLshort, GLshort);

void WindowPos3sv(const GLshort *);


	
void BindBuffer(GLenum, GLuint);

void DeleteBuffers(GLsizei, const GLuint *);

void GenBuffers(GLsizei, GLuint *);

GLboolean IsBuffer(GLuint);

void BufferData(GLenum, GLsizeiptr, const GLvoid *, GLenum);

void BufferSubData(GLenum, GLintptr, GLsizeiptr, const GLvoid *);

void GetBufferSubData(GLenum, GLintptr, GLsizeiptr, GLvoid *);

GLvoid* MapBuffer(GLenum, GLenum);

GLboolean UnmapBuffer(GLenum);

void GetBufferParameteriv(GLenum, GLenum, GLint *);

void GetBufferPointerv(GLenum, GLenum, GLvoid* *);

void GenQueries(GLsizei, GLuint *);

void DeleteQueries(GLsizei, const GLuint *);

GLboolean IsQuery(GLuint);

void BeginQuery(GLenum, GLuint);

void EndQuery(GLenum);

void GetQueryiv(GLenum, GLenum, GLint *);

void GetQueryObjectiv(GLuint, GLenum, GLint *);

void GetQueryObjectuiv(GLuint, GLenum, GLuint *);



void BlendEquationSeparate(GLenum, GLenum);

GLuint CreateProgram(void);

GLuint CreateShader(GLenum);

void DeleteProgram(GLuint);

void DeleteShader(GLuint);

void AttachShader(GLuint, GLuint);

void DetachShader(GLuint, GLuint);

void ShaderSource(GLuint GLsizei, const GLchar **, const GLint *);

void CompileShader(GLuint);

GLboolean IsProgram(GLuint);

GLboolean IsShader (GLuint);

void LinkProgram(GLuint);

void UseProgram(GLuint);

void ValidateProgram(GLuint);

void Uniform1f(GLint, GLfloat);

void Uniform2f(GLint, GLfloat, GLfloat);

void Uniform3f(GLint, GLfloat, GLfloat, GLfloat);