gl_ext_api.scm

        unsigned-integer
        short
        short
        short
        short)))
  (begin
    (define MultiTexCoord4sv
      (foreign-lambda void "MultiTexCoord4sv" unsigned-integer s16vector)))
  (begin
    (define LoadTransposeMatrixf
      (foreign-lambda void "LoadTransposeMatrixf" f32vector)))
  (begin
    (define LoadTransposeMatrixd
      (foreign-lambda void "LoadTransposeMatrixd" f64vector)))
  (begin
    (define MultTransposeMatrixf
      (foreign-lambda void "MultTransposeMatrixf" f32vector)))
  (begin
    (define MultTransposeMatrixd
      (foreign-lambda void "MultTransposeMatrixd" f64vector)))
  (begin
    (define SampleCoverage
      (foreign-lambda void "SampleCoverage" float unsigned-char)))
  (begin
    (define CompressedTexImage3D
      (foreign-lambda
        void
        "CompressedTexImage3D"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexImage2D
      (foreign-lambda
        void
        "CompressedTexImage2D"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexImage1D
      (foreign-lambda
        void
        "CompressedTexImage1D"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage3D
      (foreign-lambda
        void
        "CompressedTexSubImage3D"
        unsigned-integer
        integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage2D
      (foreign-lambda
        void
        "CompressedTexSubImage2D"
        unsigned-integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage1D
      (foreign-lambda
        void
        "CompressedTexSubImage1D"
        unsigned-integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetCompressedTexImage
      (foreign-lambda
        void
        "GetCompressedTexImage"
        unsigned-integer
        integer
        (c-pointer void))))
  (begin
    (define BlendFuncSeparate
      (foreign-lambda
        void
        "BlendFuncSeparate"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin (define FogCoordf (foreign-lambda void "FogCoordf" float)))
  (begin (define FogCoordfv (foreign-lambda void "FogCoordfv" f32vector)))
  (begin (define FogCoordd (foreign-lambda void "FogCoordd" double)))
  (begin (define FogCoorddv (foreign-lambda void "FogCoorddv" f64vector)))
  (begin
    (define FogCoordPointer
      (foreign-lambda
        void
        "FogCoordPointer"
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define MultiDrawArrays
      (foreign-lambda
        void
        "MultiDrawArrays"
        unsigned-integer
        s32vector
        u32vector
        unsigned-integer)))
  (begin
    (define MultiDrawElements
      (foreign-lambda
        void
        "MultiDrawElements"
        unsigned-integer
        u32vector
        unsigned-integer
        (c-pointer (c-pointer (const void)))
        unsigned-integer)))
  (begin
    (define PointParameterf
      (foreign-lambda void "PointParameterf" unsigned-integer float)))
  (begin
    (define PointParameterfv
      (foreign-lambda void "PointParameterfv" unsigned-integer f32vector)))
  (begin
    (define PointParameteri
      (foreign-lambda void "PointParameteri" unsigned-integer integer)))
  (begin
    (define PointParameteriv
      (foreign-lambda void "PointParameteriv" unsigned-integer s32vector)))
  (begin
    (define SecondaryColor3b
      (foreign-lambda void "SecondaryColor3b" char char char)))
  (begin
    (define SecondaryColor3bv
      (foreign-lambda void "SecondaryColor3bv" c-string)))
  (begin
    (define SecondaryColor3d
      (foreign-lambda void "SecondaryColor3d" double double double)))
  (begin
    (define SecondaryColor3dv
      (foreign-lambda void "SecondaryColor3dv" f64vector)))
  (begin
    (define SecondaryColor3f
      (foreign-lambda void "SecondaryColor3f" float float float)))
  (begin
    (define SecondaryColor3fv
      (foreign-lambda void "SecondaryColor3fv" f32vector)))
  (begin
    (define SecondaryColor3i
      (foreign-lambda void "SecondaryColor3i" integer integer integer)))
  (begin
    (define SecondaryColor3iv
      (foreign-lambda void "SecondaryColor3iv" s32vector)))
  (begin
    (define SecondaryColor3s
      (foreign-lambda void "SecondaryColor3s" short short short)))
  (begin
    (define SecondaryColor3sv
      (foreign-lambda void "SecondaryColor3sv" s16vector)))
  (begin
    (define SecondaryColor3ub
      (foreign-lambda
        void
        "SecondaryColor3ub"
        unsigned-char
        unsigned-char
        unsigned-char)))
  (begin
    (define SecondaryColor3ubv
      (foreign-lambda void "SecondaryColor3ubv" u8vector)))
  (begin
    (define SecondaryColor3ui
      (foreign-lambda
        void
        "SecondaryColor3ui"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define SecondaryColor3uiv
      (foreign-lambda void "SecondaryColor3uiv" u32vector)))
  (begin
    (define SecondaryColor3us
      (foreign-lambda
        void
        "SecondaryColor3us"
        unsigned-short
        unsigned-short
        unsigned-short)))
  (begin
    (define SecondaryColor3usv
      (foreign-lambda void "SecondaryColor3usv" u16vector)))
  (begin
    (define SecondaryColorPointer
      (foreign-lambda
        void
        "SecondaryColorPointer"
        integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define WindowPos2d (foreign-lambda void "WindowPos2d" double double)))
  (begin (define WindowPos2dv (foreign-lambda void "WindowPos2dv" f64vector)))
  (begin (define WindowPos2f (foreign-lambda void "WindowPos2f" float float)))
  (begin (define WindowPos2fv (foreign-lambda void "WindowPos2fv" f32vector)))
  (begin
    (define WindowPos2i (foreign-lambda void "WindowPos2i" integer integer)))
  (begin (define WindowPos2iv (foreign-lambda void "WindowPos2iv" s32vector)))
  (begin (define WindowPos2s (foreign-lambda void "WindowPos2s" short short)))
  (begin (define WindowPos2sv (foreign-lambda void "WindowPos2sv" s16vector)))
  (begin
    (define WindowPos3d
      (foreign-lambda void "WindowPos3d" double double double)))
  (begin (define WindowPos3dv (foreign-lambda void "WindowPos3dv" f64vector)))
  (begin
    (define WindowPos3f (foreign-lambda void "WindowPos3f" float float float)))
  (begin (define WindowPos3fv (foreign-lambda void "WindowPos3fv" f32vector)))
  (begin
    (define WindowPos3i
      (foreign-lambda void "WindowPos3i" integer integer integer)))
  (begin (define WindowPos3iv (foreign-lambda void "WindowPos3iv" s32vector)))
  (begin
    (define WindowPos3s (foreign-lambda void "WindowPos3s" short short short)))
  (begin (define WindowPos3sv (foreign-lambda void "WindowPos3sv" s16vector)))
  (begin
    (define BindBuffer
      (foreign-lambda void "BindBuffer" unsigned-integer unsigned-integer)))
  (begin
    (define DeleteBuffers
      (foreign-lambda void "DeleteBuffers" unsigned-integer u32vector)))
  (begin
    (define GenBuffers
      (foreign-lambda void "GenBuffers" unsigned-integer u32vector)))
  (begin
    (define IsBuffer
      (foreign-lambda unsigned-char "IsBuffer" unsigned-integer)))
  (begin
    (define BufferData
      (foreign-lambda
        void
        "BufferData"
        unsigned-integer
        integer
        (c-pointer void)
        unsigned-integer)))
  (begin
    (define BufferSubData
      (foreign-lambda
        void
        "BufferSubData"
        unsigned-integer
        integer
        integer
        (c-pointer void))))
  (begin
    (define GetBufferSubData
      (foreign-lambda
        void
        "GetBufferSubData"
        unsigned-integer
        integer
        integer
        (c-pointer void))))
  (begin
    (define MapBuffer
      (foreign-lambda
        (c-pointer void)
        "MapBuffer"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define UnmapBuffer
      (foreign-lambda unsigned-char "UnmapBuffer" unsigned-integer)))
  (begin
    (define GetBufferParameteriv
      (foreign-lambda
        void
        "GetBufferParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetBufferPointerv
      (foreign-lambda
        void
        "GetBufferPointerv"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer void)))))
  (begin
    (define GenQueries
      (foreign-lambda void "GenQueries" unsigned-integer u32vector)))
  (begin
    (define DeleteQueries
      (foreign-lambda void "DeleteQueries" unsigned-integer u32vector)))
  (begin
    (define IsQuery (foreign-lambda unsigned-char "IsQuery" unsigned-integer)))
  (begin
    (define BeginQuery
      (foreign-lambda void "BeginQuery" unsigned-integer unsigned-integer)))
  (begin (define EndQuery (foreign-lambda void "EndQuery" unsigned-integer)))
  (begin
    (define GetQueryiv
      (foreign-lambda
        void
        "GetQueryiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetQueryObjectiv
      (foreign-lambda
        void
        "GetQueryObjectiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetQueryObjectuiv
      (foreign-lambda
        void
        "GetQueryObjectuiv"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define BlendEquationSeparate
      (foreign-lambda
        void
        "BlendEquationSeparate"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define CreateProgram (foreign-lambda unsigned-integer "CreateProgram")))
  (begin
    (define CreateShader
      (foreign-lambda unsigned-integer "CreateShader" unsigned-integer)))
  (begin
    (define DeleteProgram
      (foreign-lambda void "DeleteProgram" unsigned-integer)))
  (begin
    (define DeleteShader
      (foreign-lambda void "DeleteShader" unsigned-integer)))
  (begin
    (define AttachShader
      (foreign-lambda void "AttachShader" unsigned-integer unsigned-integer)))
  (begin
    (define DetachShader
      (foreign-lambda void "DetachShader" unsigned-integer unsigned-integer)))
  (begin
    (define ShaderSource
      (foreign-lambda
        void
        "ShaderSource"
        unsigned-integer
        (c-pointer (c-pointer (const char)))
        s32vector)))
  (begin
    (define CompileShader
      (foreign-lambda void "CompileShader" unsigned-integer)))
  (begin
    (define IsProgram
      (foreign-lambda unsigned-char "IsProgram" unsigned-integer)))
  (begin
    (define IsShader
      (foreign-lambda unsigned-char "IsShader" unsigned-integer)))
  (begin
    (define LinkProgram (foreign-lambda void "LinkProgram" unsigned-integer)))
  (begin
    (define UseProgram (foreign-lambda void "UseProgram" unsigned-integer)))
  (begin
    (define ValidateProgram
      (foreign-lambda void "ValidateProgram" unsigned-integer)))
  (begin (define Uniform1f (foreign-lambda void "Uniform1f" integer float)))
  (begin
    (define Uniform2f (foreign-lambda void "Uniform2f" integer float float)))
  (begin
    (define Uniform3f
